--- a/macros.in
+++ b/macros.in
@@ -1009,6 +1009,10 @@ done \
 # arch macro for all supported PowerPC 64 processors
 %power64	ppc64 ppc64p7 ppc64le
 
+#------------------------------------------------------------------------------
+# arch macro for all supported mips 64-bit procs/socs compatibles
+%mips	mips mipsel mips64 mips64el mips32 mips32el
+
 #------------------------------------------------------------------------
 # Use in %install to generate locale specific file lists. For example,
 #
