Add %mips macro define all mips abi (from Arnaud Patard)

--- a/macros.in
+++ b/macros.in
@@ -998,6 +998,10 @@ done \
 # arch macro for all supported Alpha processors
 %alpha	alpha alphaev56 alphaev6 alphaev67
 
+#------------------------------------------------------------------------------
+# arch macro for all supported mips 64-bit procs/socs compatibles
+%mips	mips mipsel mips64 mips64el mips32 mips32el
+
 #------------------------------------------------------------------------
 # Use in %install to generate locale specific file lists. For example,
 #
