switch to armv5tl
 (from Arnaud Patard)
  There are little chances that we'll have armv4tl. Doesn't use
  armv5tel as some SoC have broken instructions in the "e" extension

--- a/macros.in
+++ b/macros.in
@@ -988,7 +988,7 @@ done \
 
 #------------------------------------------------------------------------------
 # arch macro for all supported ARM processors
-%arm	armv3l armv4b armv4l armv4tl armv5tel armv5tejl armv6l armv7l
+%arm	armv3l armv4b armv4l armv4tl armv5tl armv5tel armv5tejl armv6l armv7l
 
 #------------------------------------------------------------------------------
 # arch macro for all supported Sparc processors
