--- a/macros.in
+++ b/macros.in
@@ -179,7 +179,8 @@
 %package debuginfo\
 Summary: Debug information for package %{name}\
 Group: Development/Debug\
-AutoReqProv: 0\
+AutoReq: 0\
+AutoProv: 1\
 #Requires: %{?!debug_package_requires:%{name} = %{version}-%{release}}%{?debug_package_requires}\
 %description debuginfo\
 This package provides debug information for package %{name}.\
