disttag-macro.diff
diff --git a/build/parsePreamble.c b/build/parsePreamble.c
index 7362077..eaf4d5a 100644
--- a/build/parsePreamble.c
+++ b/build/parsePreamble.c
@@ -312,6 +312,7 @@ static struct optionalTag {
     { RPMTAG_PACKAGER,		"%{packager}" },
     { RPMTAG_DISTRIBUTION,	"%{distribution}" },
     { RPMTAG_DISTURL,		"%{disturl}" },
+    { RPMTAG_DISTTAG,		"%{disttag}" },
     { RPMTAG_BUGURL,		"%{bugurl}" },
     { -1, NULL }
 };
diff --git a/macros.in b/macros.in
index 759ebeb..72e9058 100644
--- a/macros.in
+++ b/macros.in
@@ -279,6 +279,16 @@ package or when debugging this package.\
 #
 #%bugurl
 
+#	Configurable distribution tag, same as Disttag: tag in a specfile.
+#	The tag will be used to supply reliable information to tools like
+#	rpmfind.
+#
+# Note: You should not configure with disturl (or build packages with
+# the Disttag: tag) unless you are willing to supply content in a
+# yet-to-be-determined format at the tag specified.
+#
+#%disttag
+
 #	Boolean (i.e. 1 == "yes", 0 == "no") that controls whether files
 #	marked as %doc should be installed.
 #%_excludedocs

--- a/macros.in
+++ b/macros.in
@@ -279,6 +279,16 @@ package or when debugging this package.\
 #
 #%bugurl
 
+#	Configurable distribution tag, same as Disttag: tag in a specfile.
+#	The tag will be used to supply reliable information to tools like
+#	rpmfind.
+#
+# Note: You should not configure with disturl (or build packages with
+# the Disttag: tag) unless you are willing to supply content in a
+# yet-to-be-determined format at the tag specified.
+#
+#%disttag
+
 #	Boolean (i.e. 1 == "yes", 0 == "no") that controls whether files
 #	marked as %doc should be installed.
 #%_excludedocs
