--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -6,6 +6,7 @@ CLEANFILES =
 
 EXTRA_DIST = \
 	brp-compress brp-python-bytecompile brp-java-gcjcompile \
+	brp-lib64-linux brp-symlink \
 	brp-strip brp-strip-comment-note brp-python-hardlink \
 	brp-strip-shared brp-strip-static-archive \
 	check-files check-prereqs \
@@ -24,6 +25,7 @@ EXTRA_DIST = \
 
 rpmconfig_SCRIPTS = \
 	brp-compress brp-python-bytecompile brp-java-gcjcompile \
+	brp-lib64-linux brp-symlink \
 	brp-strip brp-strip-comment-note brp-python-hardlink \
 	brp-strip-shared brp-strip-static-archive \
 	check-files check-prereqs \
