--- a/rpmpopt.in
+++ b/rpmpopt.in
@@ -101,7 +101,8 @@ Relocations : %|PREFIXES?{[%{PREFIXES} ]}:{(not relocatable)}|\n\
 %|URL?{URL         : %{URL}\n}|\
 %|BUGURL?{Bug URL     : %{BUGURL}\n}|\
 Summary     : %{SUMMARY}\n\
-Description :\n%{DESCRIPTION}\n' \
+Description :\n%{DESCRIPTION}\n\
+Distribution: %{DISTRIBUTION}\n' \
 	--POPTdesc=$"list descriptive information from package(s)"
 
 rpm	alias --changelog --qf '[* %{CHANGELOGTIME:day} %{CHANGELOGNAME}\n%{CHANGELOGTEXT}\n\n]' \
