--- a/fileattrs/Makefile.am
+++ b/fileattrs/Makefile.am
@@ -6,6 +6,7 @@ fattrsdir = $(rpmconfigdir)/fileattrs
 
 fattrs_DATA = \
 	desktop.attr elf.attr font.attr libtool.attr perl.attr perllib.attr \
-	pkgconfig.attr python.attr ocaml.attr script.attr mono.attr
+	pkgconfig.attr python.attr ocaml.attr script.attr mono.attr \
+	debuginfo.attr elflib.attr firmware.attr ksyms.attr sysvinit.attr
 
 EXTRA_DIST = $(fattrs_DATA)
