--- a/macros.in
+++ b/macros.in
@@ -1024,6 +1024,9 @@ done \
 %__urlhelper_proxyopts   %{?_httpproxy:--proxy %{_httpproxy}%{?_httpport::%{_httpport}}}%{!?_httpproxy:%{nil}}
 %_urlhelper             %{__urlhelpercmd} %{?__urlhelper_localopts} %{?__urlhelper_proxyopts} %{__urlhelperopts}
 
+# Syslog support when installing/removing rpms
+%_use_syslog  1
+
 #------------------------------------------------------------------------------
 # Collection specific macros
 %__plugindir		%{_libdir}/rpm-plugins
